<resources>
    <string name="app_name">InvestEasy</string>

    <string name="message_empty_field">Fill in all fields</string>
    <string name="message_zero_field">Value must be greater than 0</string>

    <string name="main_title">InvestEasy</string>

    <string name="main_label_value_received">Amount received at the end of the investment</string>
    <string name="main_value_received">0.0</string>
    <string name="main_label_income_value">Income value</string>
    <string name="main_income_value">0.0</string>
    <string name="main_contribution">Contribution per month</string>
    <string name="main_hint_contribution">500,00</string>
    <string name="main_months">Number of months</string>
    <string name="main_hint_months">24</string>
    <string name="main_fees">Fees</string>
    <string name="main_hint_fees">1.2</string>
    <string name="main_reset">Reset</string>
    <string name="main_calculate">Calculate</string>
</resources>